<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">music game4</string>
    <string name="action_settings">Settings</string>
    
    <string name="b_button">BD</string>
    <string name="s_button">Snare</string>
    <string name="h_button">Hihat</string>
    <string name="ho_button">Open</string>
    
    <string name="c_button">Clap</string>
    <string name="riff_button">Bline</string>
    <string name="t1_button">Tom1</string>
    <string name="t2_button">Tom2</string>
    
    <string name="b2_button">BD2</string>
    <string name="s2_button">Snare2</string>
    <string name="r_button">Ride</string>
    <string name="cr_button">Crash</string>
    
    <string name="p_button">Perc</string>
    <string name="sp_button">Splash</string>
    <string name="sf_button">SFX</string>
    <string name="tr_button">Triangle</string>

</resources>
